--- a/air-draw.html
+++ b/air-draw.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!--<meta name="permissions-policy" content="camera=()">-->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Air Drawing Demo</title>
